app/styles/custom.css
/* ... */
    .footer .footer-menu ul li {
      margin-left: 50px; }
      .footer .footer-menu ul li a {
        position: relative;
        color: #0A1247; }
        .footer .footer-menu ul li a::after {
          content: '';
          position: absolute;
          height: 2px;
          width: 100%;
          transform: scale(0);
          background: #0A1247;
          bottom: -5px;
          left: 0;
          transition: all 0.5s ease; }
        .footer .footer-menu ul li a:hover::after {
          transform: scale(0.8); }

.privacy {
  background: #0A1247;
  padding: 20px 0; }
  .privacy .privacy-content {
    display: flex;
    align-items: center;
    justify-content: flex-end; }
    .privacy .privacy-content p {
      color: #fff;
      font-size: 14px; }
    .privacy .privacy-content .social-media {
      display: flex; }
      .privacy .privacy-content .social-media img {
        margin-left: 20px;
        cursor: pointer; }

        .login-image {
                      position: absolute;
            right: 0;
            max-height: 700px;
            overflow: hidden;
        }


.privacy .privacy-content p {
  color: #fff;
  font-size: 14px;
}

.privacy .privacy-content .social-media {
  display: flex;
}

.privacy .privacy-content .social-media img {
  margin-left: 20px;
  cursor: pointer;
}

.login-image {
  position: absolute;
  right: 0;
  max-height: 700px;
  overflow: hidden;
}

/*# sourceMappingURL=custom.css.map */

/*
* custom sidebar styles for dashboard for mobile responsiveness
*/
/* .sidebar {
  width: 0px;
}

.extended .sidebar {
  width: 200px;
}

.extended .sidebar .top-logo-extended {
  display: none;
}

@media (min-width: 768px) {
  .sidebar {
    width: 80px;
  }

  .extended .sidebar .top-logo-extended {
    display: block;
  }
} */
.logo img{
  max-width: 300px;
}
button.custom {
  width: 100%;
    padding: 15px 40px;
    border-radius: 35px;
    background-color: #395373;
    color: #fff;
}

ul.no-styling {
  margin: 0;
  padding: 0;
  list-style: none;
}

.m-16{
  margin: 16px !important;
}

.p-16{
  padding: 16px !important;
}

.microsoft-login-btn {
  margin-top: 14px;
  display: flex;
  align-items: center;
  width: 100%;
  box-shadow: 0 2px 4px 0 rgb(0 0 0 / 25%);
  border-radius: 50px;
}
.microsoft-login-btn .login-button-custom {
  flex-grow: 1;
}

.microsoft-login-btn .icon-block {
  height: 48px;
  width: 48px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.cancel-subscription-block {
  width: 100%;
  padding: 20px;
  border-radius: 10px;
  margin: 10px;
}

.cancel-subscription-block .cancel-subscription-note {
  background-color: #3a53732b;
  padding: 10px;
  border-radius: 5px;
}

.cancel-subscription-block .cancel-subscription-header {
  font-size: 20px;
  padding: 0px 0px 20px;
}

.cancel-subscription-block .cancel-subscription-description {
  font-size: 14px;
  padding: 0px 0px 20px;
}

.confirm-cancel .confirm-button{
  padding: 0px 10px 0px 10px;
}

.delete-subscription{
  padding: 0px 4px 0px 0px;
  font-size: 18px;
}

.cancel-subscription-block .confirm-cancel{
  padding: 10px 0px 0px;
  text-align: right;
}

.cancel-subscription-block .cancel-subscription-note .info-cancel{
  padding: 0px 0px 0px 6px;
}

span.spacer {
  flex: 1 1 auto;
}

.search-section {
  position: relative;
}

.search-section i.first-element {
  position: absolute;
  z-index: 99;
  height: calc(100% - 32px);
  padding: 0 10px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.search-section i.last-element {
  position: absolute;
  z-index: 99;
  top: 15px;
  right: 15px;
  height: calc(100% - 32px);
  padding: 0 10px;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
}

.search-input-class input {
  padding-left: 40px !important;
  background-color: #f5f5f5 !important;
  border-radius: 8px;
}

.search-input-class .md-whiteframe-z1 {
  box-shadow: none !important;
  background-color: #f5f5f5!important;
  border-radius: 8px;
}

.search-section .custom-autocomplete {
  padding: 10px 40px;
  border: none;
  background-color: #f5f5f5!important;
  border-radius: 8px;
  width: 100%;
}

.search-section .custom-autocomplete-dropdown {
  position: absolute;
  width: calc(100% - 32px);
  padding: 10px 0;
  background-color: #fff;
  box-shadow: rgba(0,0,0,.16) 0 1px 4px;
  border-radius: 10px;
  max-height: 294px;
  overflow-y: auto;
  display: grid;
  gap: 2px;
  z-index: 1;
}

.search-section .custom-autocomplete-dropdown .custom-autocomplete-dropdown-item {
  width: 100%;
  padding: 10px 12px;
  cursor: pointer;
}
.search-section .custom-autocomplete-dropdown .custom-autocomplete-dropdown-item:hover {
  background-color: #f5f5f5;
}

.search-section .custom-autocomplete-dropdown .custom-autocomplete-dropdown-key {
  background-color: #e6e6e6;
  cursor: not-allowed;
  pointer-events: none;
  padding: 8px 10px;
  text-transform: capitalize;
}

.auth-app-code {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 20px;
}

.qr-code-auth{
  margin-top: 15px;
  margin-bottom: 15px;
  height: 200px;
}

.auth-code-width{
  width: 30%;
}

.radio-group{
  margin-bottom: 45px;
}
.reset-otp {
  text-align: right;
}

.reset-otp span {
  cursor: pointer;
}

.request-otp-info {
  text-align: center;
  margin: 15px 0;
  font-size: 15px;
}

.request-assistant {
  text-align: center;
  margin-top: 15px;
}
.request-assistant span {
  color: red;
  text-decoration: underline;
  cursor: pointer;
}
.form-port-details{
  border: 1px solid #f5f5f5;
  padding: 0px 20px 0px;
  margin-top: 15px;
}

.stepper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  margin-top: 20px;
  margin-bottom: 20px;
}

.step {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  width: 25%;
  text-align: center;
}
/* ... */

